--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "author": "alanwcg <alancintra7@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
@@ -18,7 +20,9 @@
     "eslint-plugin-promise": "^6.0.1",
     "git-commit-msg-linter": "^4.1.3",
     "husky": "^8.0.1",
+    "jest": "^29.0.3",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.1",
     "typescript": "^4.8.3"
   }
 }
