--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "ES2021",
     "esModuleInterop": true,
     "allowJs": true,
-    "strict": false
+    "strict": false,
+    "strictNullChecks": true
   }
 }
