--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "module": "CommonJS",
     "target": "ES2021",
     "esModuleInterop": true,
-    "allowJs": true,
-    "strict": false
+    "allowJs": true
   }
 }
