--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
+    "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "^8.23.1",
@@ -29,5 +30,8 @@
     "lint-staged": "^13.0.3",
     "ts-jest": "^29.0.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
