--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@types/validator": "^13.7.6",
@@ -32,6 +33,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "validator": "^13.7.0"
   }
 }
