--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "mongodb": "^4.10.0",
     "validator": "^13.7.0"
   }
 }
