--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
@@ -33,6 +34,7 @@
     "jest": "^29.0.3",
     "lint-staged": "^13.0.3",
     "sucrase": "^3.27.0",
+    "supertest": "^6.2.4",
     "ts-jest": "^29.0.1",
     "typescript": "^4.8.3"
   },
