--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.0.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.7.18",
     "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.6",
@@ -42,6 +43,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "fast-glob": "^3.2.12",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
     "validator": "^13.7.0"
   }
