--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
     working_dir: /usr/src/clean-node-api
     restart: always
     command: bash -c "npm install --omit=dev && npm run debug"
+    environment:
+      - MONGO_URL=mongodb://mongo:mongo@mongo:27017/clean-node-api
     volumes:
       - ./dist/:/usr/src/clean-node-api/dist/
       - ./package.json:/usr/src/clean-node-api/package.json
