--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^18.7.18",
     "@types/rimraf": "^3.0.2",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
@@ -52,6 +53,7 @@
     "module-alias": "^2.2.2",
     "mongodb": "^4.10.0",
     "nodemon": "^2.0.20",
+    "swagger-ui-express": "^4.6.2",
     "validator": "^13.7.0"
   },
   "engines": {
