--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:ci": "yarn test --coverage"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@shelf/jest-mongodb": "^4.1.0",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
