--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@apollo/server": "^4.5.0",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
