--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.4",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
