--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "up": "yarn build && docker-compose up -d",
     "down": "docker-compose down",
-    "check": "yarn install --check-files",
+    "ui": "yarn upgrade-interactive --latest",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "yarn test --watch -c jest-unit-config.js",
@@ -22,33 +22,33 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@shelf/jest-mongodb": "^4.1.0",
+    "@shelf/jest-mongodb": "^4.1.7",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.14",
-    "@types/jest": "^29.0.3",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.7.18",
-    "@types/rimraf": "^3.0.2",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.5",
+    "@types/rimraf": "^4.0.5",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
-    "@types/validator": "^13.7.6",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "@typescript-eslint/parser": "^5.37.0",
+    "@types/validator": "^13.7.14",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.23.1",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
+    "eslint": "^8.36.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-promise": "^6.0.1",
-    "git-commit-msg-linter": "^4.1.3",
-    "husky": "^8.0.1",
-    "jest": "^29.0.3",
-    "lint-staged": "^13.0.3",
+    "git-commit-msg-linter": "^4.9.2",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
     "mockdate": "^3.0.5",
-    "rimraf": "^3.0.2",
-    "supertest": "^6.2.4",
-    "ts-jest": "^29.0.1",
-    "typescript": "^4.8.3"
+    "rimraf": "^4.4.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "@apollo/server": "^4.5.0",
@@ -59,10 +59,10 @@
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.2",
     "mongo-round": "^1.0.0",
-    "mongodb": "^4.10.0",
-    "nodemon": "^2.0.20",
+    "mongodb": "^5.1.0",
+    "nodemon": "^2.0.21",
     "swagger-ui-express": "^4.6.2",
-    "validator": "^13.7.0"
+    "validator": "^13.9.0"
   },
   "engines": {
     "node": "16.x"
